--- a/P3-code/P3-code/P3-code.csproj
+++ b/P3-code/P3-code/P3-code.csproj
@@ -47,6 +47,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppUser.cs" />
+    <Compile Include="FakePreferenceRepository.cs" />
+    <Compile Include="FormProject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormProject.Designer.cs">
+      <DependentUpon>FormProject.cs</DependentUpon>
+    </Compile>
+    <Compile Include="IPreferenceRepository.cs" />
+    <Compile Include="Preference.cs" />
+    <Compile Include="FakeProjectRepository.cs" />
+    <Compile Include="IProjectRepository.cs" />
+    <Compile Include="Project.cs" />
     <Compile Include="FakeAppUserRepository.cs" />
     <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
@@ -68,6 +80,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormProject.resx">
+      <DependentUpon>FormProject.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
