--- a/P3-code/P3-code/P3-code.csproj
+++ b/P3-code/P3-code/P3-code.csproj
@@ -48,11 +48,23 @@
   <ItemGroup>
     <Compile Include="AppUser.cs" />
     <Compile Include="FakePreferenceRepository.cs" />
+    <Compile Include="FormCreateProject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCreateProject.Designer.cs">
+      <DependentUpon>FormCreateProject.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormProject.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormProject.Designer.cs">
       <DependentUpon>FormProject.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormRemoveProject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormRemoveProject.Designer.cs">
+      <DependentUpon>FormRemoveProject.cs</DependentUpon>
     </Compile>
     <Compile Include="IPreferenceRepository.cs" />
     <Compile Include="Preference.cs" />
@@ -75,6 +87,9 @@
     <Compile Include="IAppUser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormCreateProject.resx">
+      <DependentUpon>FormCreateProject.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -83,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormProject.resx">
       <DependentUpon>FormProject.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormRemoveProject.resx">
+      <DependentUpon>FormRemoveProject.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
