created FormModifyProject, no funtion

--- a/P3-code/P3-code/P3-code.csproj
+++ b/P3-code/P3-code/P3-code.csproj
@@ -48,6 +48,12 @@
   <ItemGroup>
     <Compile Include="AppUser.cs" />
     <Compile Include="FakePreferenceRepository.cs" />
+    <Compile Include="FormModifyProject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormModifyProject.Designer.cs">
+      <DependentUpon>FormModifyProject.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormCreateProject.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormModifyProject.resx">
+      <DependentUpon>FormModifyProject.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormProject.resx">
       <DependentUpon>FormProject.cs</DependentUpon>
